Hotfix for change pin API function not working - Update function variable from hashed_pin to pin matching updated   parameters. - Add text-wrapping to notification containers. - Fix notification close button not working.

--- a/src/django/auth_app/static/css/styles.css
+++ b/src/django/auth_app/static/css/styles.css
@@ -8,6 +8,10 @@ body, html {
     min-height: 100vh;         /* Let the document grow taller than the viewport */
 }
 
+.z-top {
+  z-index: 2000 !important;
+}
+
 /* If you still want the login box centered, apply flex styling only to the login container */
 .login-container {
     display: flex;
